starting cert4 report

--- a/templates/report_cert4.mustache
+++ b/templates/report_cert4.mustache
@@ -17,12 +17,10 @@
     {
     }
 }}
-<h1>Your Current Study progress</h1>
-<div>
-    Course Name: {{coursename}} <br>
-    Total units: {{totalunits}}<br>
-    Completed Units {{completedunists}}<br>
-</div>
+<h1>{{coursename}}</h1>
 
+<table>
+
+</table>
 <hr>
 <input type="button" class="btn btn-primary" value="Details" onclick="location.href='{{editurl}}'">
