created the link

--- a/templates/report_cert4.mustache
+++ b/templates/report_cert4.mustache
@@ -19,8 +19,64 @@
 }}
 <h1>{{coursename}}</h1>
 
-<table>
 
+<table class="table table-bordered table-hover" >
+    <thead class="thead-light">
+        <tr>
+            <th style="width: 400px" class ="text-center">UNIT NAME</th>
+            <th style="width: 90px"class ="text-center">Previous Assessment*</th>
+            <th style="width: 90px"class ="text-center">Written Activity</th>
+            <th style="width: 90px"class ="text-center">Summative Assessment</th>
+            <th style="width: 90px"class ="text-center">Overrall</th>
+        </tr>
+        
+    </thead>
+    <tbody>
+    <tr><th colspan="5">Term 1</th></tr>
+    {{#grades_term1}}
+    <tr>
+        <td><i class="icon fa fa-graduation-cap fa-fw " aria-hidden="true"></i>{{{link}}}</td>
+        <td>{{{previous1}}}</td>
+        <td>{{{written}}}</td>
+        <td>{{{summative}}}</td>
+        <td><b>{{{overrall}}}</b></td>
+        </tr>
+    {{/grades_term1}}
+        <tr><th colspan="5">Term 2</th></tr>
+    {{#grades_term2}} 
+    <tr>
+        <td><i class="icon fa fa-graduation-cap fa-fw " aria-hidden="true"></i>{{{link}}}</td>
+        <td>{{{previous1}}}</td>
+        <td>{{{written}}}</td>
+        <td>{{{summative}}}</td>
+        <td><b>{{{overrall}}}</b></td>
+        </tr>
+    {{/grades_term2}}
+
+    <tr><th colspan="5">Term 3</th></tr>
+    {{#grades_term3}}
+    <tr>
+        <td><i class="icon fa fa-graduation-cap fa-fw " aria-hidden="true"></i>{{{link}}}</td>
+        <td>{{{previous1}}}</td>
+        <td>{{{written}}}</td>
+        <td>{{{summative}}}</td>
+        <td><b>{{{overrall}}}</b></td>
+        </tr>
+    {{/grades_term3}}
+
+    <tr><th colspan="5">Term 4</th></tr>
+    {{#grades_term4}}
+    <tr>
+        <td><i class="icon fa fa-graduation-cap fa-fw " aria-hidden="true"></i>{{{link}}}</td>
+        <td>{{{previous1}}}</td>
+        <td>{{{written}}}</td>
+        <td>{{{summative}}}</td>
+        <td><b>{{{overrall}}}</b></td>
+        </tr>
+    {{/grades_term4}}
+
+
+    </tbody>
 </table>
 <hr>
-<input type="button" class="btn btn-primary" value="Details" onclick="location.href='{{editurl}}'">
+<input type="button" class="btn btn-primary" value="Back" onclick="location.href='http://localhost/moodle/'">
