improved the overrall calculation

--- a/templates/report_cert4.mustache
+++ b/templates/report_cert4.mustache
@@ -27,7 +27,7 @@
             <th style="width: 90px"class ="text-center">Previous Assessment*</th>
             <th style="width: 90px"class ="text-center">Written Activity</th>
             <th style="width: 90px"class ="text-center">Summative Assessment</th>
-            <th style="width: 90px"class ="text-center">Overrall</th>
+            <th style="width: 90px"class ="text-center">Overall</th>
         </tr>
         
     </thead>
@@ -39,7 +39,7 @@
         <td>{{{previous1}}}</td>
         <td>{{{written}}}</td>
         <td>{{{summative}}}</td>
-        <td><b>{{{overrall}}}</b></td>
+        <td><b>{{{overall}}}</b></td>
         </tr>
     {{/grades_term1}}
         <tr><th colspan="5">Term 2</th></tr>
@@ -49,7 +49,7 @@
         <td>{{{previous1}}}</td>
         <td>{{{written}}}</td>
         <td>{{{summative}}}</td>
-        <td><b>{{{overrall}}}</b></td>
+        <td><b>{{{overall}}}</b></td>
         </tr>
     {{/grades_term2}}
 
@@ -60,7 +60,7 @@
         <td>{{{previous1}}}</td>
         <td>{{{written}}}</td>
         <td>{{{summative}}}</td>
-        <td><b>{{{overrall}}}</b></td>
+        <td><b>{{{overall}}}</b></td>
         </tr>
     {{/grades_term3}}
 
@@ -71,7 +71,7 @@
         <td>{{{previous1}}}</td>
         <td>{{{written}}}</td>
         <td>{{{summative}}}</td>
-        <td><b>{{{overrall}}}</b></td>
+        <td><b>{{{overall}}}</b></td>
         </tr>
     {{/grades_term4}}
 
