--- a/templates/report_diploma.mustache
+++ b/templates/report_diploma.mustache
@@ -17,7 +17,9 @@
     {
     }
 }}
-<h1>{{coursename}}</h1>
+<h3>Course:&nbsp<b>{{coursename}}</b> &nbsp</h3> 
+<h3>Student Name:&nbsp<b>{{studentname}}</b></h3>
+<h4>({{studentemail}})</h4>
 
 
 <table class="table table-bordered table-hover" >
