added the new cpc packages

--- a/templates/report_cert4.mustache
+++ b/templates/report_cert4.mustache
@@ -18,10 +18,7 @@
     }
 }}
 <h3>Course:&nbsp<b>{{coursename}}</b> &nbsp</h3> 
-<h3>Student Name:&nbsp<b>{{studentname}}</b></h3>
-<h4>({{studentemail}})</h4>
-
-
+<h3>Student Name:&nbsp<b>{{studentname}}</b>({{studentemail}})</h3>
 <table class="table table-bordered table-hover" >
     <thead class="thead-light">
         <tr>
